[LFC] Fix showLayoutTree to show anonymous inline boxes https://bugs.webkit.org/show_bug.cgi?id=215437

Reviewed by Antti Koivisto.

This patch also adds baseline and run content logging.

* layout/layouttree/LayoutTreeBuilder.cpp:
(WebCore::Layout::outputLayoutBox):
(WebCore::Layout::outputLayoutTree):


Canonical link: https://commits.webkit.org/229284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266994 268f45cc-cd09-0410-ab3c-d52691b4dbfc